# frappe-graph

./: .gitignore  CLAUDE.md  PRD.md  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
docs/: verification.md
scripts/: confidence_audit.py
src/frappe_graph/: build.py  cli.py  detect.py  enrich.py  merge.py
src/frappe_graph/install/: hook.py  skill.py
src/frappe_graph/passes/: doctype.py  hooks.py  refs.py  rpc.py  whitelist.py
tests/: conftest.py  test_bench_build.py  test_cli.py  test_cli_integration.py  test_detect.py  test_detect_bench.py  test_doctype_pass.py  test_enrich.py  test_hooks_pass.py  test_install_hook.py  test_install_skill.py  test_merge.py  test_refs_pass.py  test_rpc_pass.py  test_whitelist_pass.py
tests/fixtures/sample_app/: baseline_graph.json
tests/fixtures/sample_app/sample_app/: hooks.py
tests/fixtures/sample_app/sample_app/sample_module/doctype/customer/: customer.json  customer.py
tests/fixtures/sample_app/sample_app/sample_module/doctype/sales_order/: sales_order.json  sales_order.py
tests/fixtures/sample_app/sample_app/sample_module/doctype/sales_order_item/: sales_order_item.json  sales_order_item.py
