[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frappe-graph"
version = "0.1.0"
description = "Frappe-aware enrichment layer over graphify"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sharique Hasan Ansari" }]
dependencies = [
    "graphifyy>=0.8.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
frappe-graph = "frappe_graph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frappe_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
